# proof-of-reality

./: .gitignore  Cargo.toml  Dockerfile  README.md  eslint.config.mjs  nixpacks.toml  nx.json  package-lock.json  package.json  railway.toml
apps/kantainer/: next.config.js  project.json  tsconfig.json
apps/kantainer-e2e/: playwright.config.ts  project.json
apps/kantainer/src/app/: layout.tsx  page.module.css  page.tsx
apps/kantician/kantician_app/: app.json  index.html  metro.config.js  package-lock.json  package.json  project.json  tsconfig.app.json  vite.config.mts
apps/kantician/kantician_app/android/: settings.gradle
apps/kantician/kantician_app/ios/: Podfile
apps/kantician/kantician_app/src/: main.tsx
apps/kantick/broadcaster/: package-lock.json  package.json  project.json  wrangler.toml
apps/kantick/broadcaster/src/: index.ts
apps/kantick/extractor/: .env.example  Cargo.toml  Dockerfile  README.md  project.json
apps/kantick/extractor/src/: main.rs
apps/kantick/extractor/src/config/: mod.rs
apps/kantick/extractor/src/models/: mod.rs
apps/kantick/extractor/src/services/: cloudflare.rs  extractor.rs  mod.rs  solana.rs
apps/kantick/extractor/tests/: signature_compat_test.rs
apps/kantick/kantick_web/: project.json  tsconfig.json
apps/kantist/kantist_app/: app.json  index.js  metro.config.js  package-lock.json  package.json  project.json
apps/scribe/: .dev.vars.example  package-lock.json  package.json  project.json  tsconfig.json  wrangler.toml
apps/scribe/src/: index.ts
papers/por/: main.tex
papers/por-chain/: main.tex
(+36 files in other folders)
